@startuml Architechture

package VSCode {
  class Viewer {
    {static} createHtml(body: string): string
    {static} escapeHtml(body: string): string
  }

  class Panel {
    + create(title: string): vscode.WebviewPanel
  }
}

package Function {
  abstract class FunctionBase {
    # editor: vscode.TextEditor
    # command: string
    # disposable(): vscode.Disposable
  }

  class SkaffoldPreviewFunction {
    {static} create(): SkaffoldPreviewFunction
  }

  class ProfileSkaffoldPreviewFunction {
    {static} create(): ProfileSkaffoldPreviewFunction
  }
}

FunctionBase <|-- SkaffoldPreviewFunction
FunctionBase <|-- ProfileSkaffoldPreviewFunction

package Skaffold {
  abstract class RenderBase {

  }

  class ProfileRender {

  }

  class Render {

  }

  RenderBase <|-up- Render
  RenderBase <|-up- ProfileRender
}

Render <-up- SkaffoldPreviewFunction
ProfileRender <-up- ProfileSkaffoldPreviewFunction

class StatusBarItem {
  + command: string
  + text: string
}

class Extension {
  + context: vscode.ExtensionContext
  + addFunctions(funcion: FunctionBase): void
  + addStatusBarItem(statusBarItem: StatusBarItem): void
}

Extension -down-> FunctionBase
Extension -down-> StatusBarItem

@enduml